--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -178,11 +178,11 @@
 
 <p class="margin">In Northern Ireland, the causes behind high levels of depression, anxiety and other neural disorders are multiple.
 
-<p class="margin">Perhaps the most recognized contributor is the legacy of the Troubles. 
+<p class="margin">Perhaps the most recognised contributor is the legacy of the Troubles. 
 
 <p class="margin">The Detail <a href="http://www.thedetail.tv/issues/304/suicide-1998-2012/suicide-kills-as-many-as-the-troubles" target="_blank">previously reported</a> almost as many people have died by suicide in the years since the Good Friday Agreement than were killed by sectarian violence during the Troubles.
 
-<p class="margin">“Coming out of the Troubles, people are beginning to talk about and recognize post-trauma anxiety, depression and stress,” said Tom McEneaney of Aware Defeat Depression, a charity in Northern Ireland. 
+<p class="margin">“Coming out of the Troubles, people are beginning to talk about and recognise post-trauma anxiety, depression and stress,” said Tom McEneaney of Aware Defeat Depression, a charity in Northern Ireland. 
 
 <p class="margin">“Nobody’s shouting from the rooftops, but depression is sitting under the sofa, gathering momentum.”
 
@@ -194,7 +194,7 @@
 
 <p class="margin">But while neural disorders are becoming increasingly prevalent, the focus among health officials has been weening the public and GPs off their reliance on psychotropic medicines.
 
-<p class="margin"><a href="http://www.psychologytoday.com/blog/side-effects/201311/the-oecd-warns-antidepressant-overprescribing">In a widely publicized report</a> last November, the Organization for Economic Co-operation and Development (OECD) showed a significant increase in the use of, specifically, antidepressants during the last decade among 23 member countries, mostly European. According to the report, the wider use of antidepressants to treat milder symptoms “raised concerns about appropriateness.”
+<p class="margin"><a href="http://www.psychologytoday.com/blog/side-effects/201311/the-oecd-warns-antidepressant-overprescribing">In a widely publicised report</a> last November, the Organisation for Economic Co-operation and Development (OECD) showed a significant increase in the use of, specifically, antidepressants during the last decade among 23 member countries, mostly European. According to the report, the wider use of antidepressants to treat milder symptoms “raised concerns about appropriateness.”
 
 
 	<p class="margin">The report also compared prescribing rates among member countries using the number of defined daily doses per 1,000 people per day, which is a measure designed to approximate the number of patients regularly using a medication per thousand.
@@ -229,7 +229,7 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 
 <p class="margin">The Detail’s analysis indicates, if Northern Ireland were considered apart from the rest of UK, it would take the top spot internationally in the OECD report at 129 daily doses per thousand per day. 
 
-<p class="margin">Within the UK, Northern Ireland outpaced England and Wales in its per person rate of drug consumption across all categories The Detail analyzed. (Scotland does not release comparable data at the GP level).
+<p class="margin">Within the UK, Northern Ireland outpaced England and Wales in its per person rate of drug consumption across all categories The Detail analysed. (Scotland does not release comparable data at the GP level).
 
 <div class="vizblocklock1 vizblock">
 <h2>Antidepressants</h2>
@@ -250,7 +250,7 @@ This graph shows the average monthly rate antidepressants are prescribed by GPs 
 
 <p class="margin">Depression prevalence statistics reported by GPs as part of the <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence" target="_blank">Quality and Outcomes Framework</a> are an indication of depression rates in the general population. Northern Ireland ranks middle of the pack in the UK, with an average of about 5.1 percent of a GP’s registered patients who have been diagnosed with depression at some point in their lifetime. England ranks highest at about 7.5 percent of patients having been clinically depressed. Wales reports just over 4 percent.
 
-<p class="margin">All GPs don’t necessarily recognize symptoms of depression the same, still the statistics indicate England ranks highest in the rate of depression diagnosis and yet prescribes significantly fewer antidepressants per patient than Northern Ireland and Wales.
+<p class="margin">All GPs don’t necessarily recognise symptoms of depression the same, still the statistics indicate England ranks highest in the rate of depression diagnosis and yet prescribes significantly fewer antidepressants per patient than Northern Ireland and Wales.
 
 <div class="drugs_list">
 <h6>Click a link to see more information on some of the most widely prescribed antidepressants, such as:</h6>
@@ -373,17 +373,17 @@ The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ir
 
 <p class="margin">“It’s increased anxiety, increased depression, increased stress among them. Clients that have existing conditions, their condition has deteriorated as a result of worrying about the welfare reforms and the impact they’re going to have on them. It’s going to have a major impact on them and also on clients we haven’t seen yet.”
 
-<p class="margin">While broad welfare reform may increase the severity and prevalence of depression, the lack of available counseling treatments may also drive more patients with mild to moderate symptoms to prescription drugs where an non-medicated alternative might suffice. 
+<p class="margin">While broad welfare reform may increase the severity and prevalence of depression, the lack of available counselling treatments may also drive more patients with mild to moderate symptoms to prescription drugs where an non-medicated alternative might suffice. 
 
 <hr class="separated"></hr>
 <a id="waiting"></a>
 <h2>The Waiting List</h2>
 
-<p class="margin">Both Black and McEneaney said the lack of timely-available counseling heavily influences a GP’s decision to put a patient on a drug regimen.
+<p class="margin">Both Black and McEneaney said the lack of timely-available counselling heavily influences a GP’s decision to put a patient on a drug regimen.
 
-<p class="margin">“I rarely refer patients for counseling in the first instance because I know they will become frustrated waiting for service,” Black said.
+<p class="margin">“I rarely refer patients for counselling in the first instance because I know they will become frustrated waiting for service,” Black said.
 
-<p class="margin">McEneaney said waiting times for counseling services range anywhere from 4 to 16 weeks. 
+<p class="margin">McEneaney said waiting times for counselling services range anywhere from 4 to 16 weeks. 
 
 <p class="margin">“GPs would say that’s a long wait for someone with mental health issues, and right enough, people can deteriorate while on waiting lists.” 
 
@@ -487,7 +487,7 @@ This graph shows the average monthly rate opioids are prescribed by GPs in North
 
 <p class="margin">Defenders of current practice say antidepressant prescription has risen due to appropriate increases in the duration of treatment rather than an increase in the number of patients diagnosed with depression.
 
-<p class="margin">Ian Reid, a professor of psychiatry, blamed the media for promoting the idea “that GPs are handing out antidepressants ‘like sweeties.’”
+<p class="margin">Ian Reid, a professor of psychiatry at University of Aberdeen, blamed the media for promoting the idea “that GPs are handing out antidepressants ‘like sweeties.’”
 
 <p class="margin">Spence questioned, though, whether prescribing antidepressants is altogether necessary in many cases. Research indicates only one in seven people actually benefit from an antidepressant regimen, he said.
 
@@ -502,15 +502,14 @@ This graph shows the average monthly rate opioids are prescribed by GPs in North
 
 <p class="margin">There is strong evidence that support groups and educational programmes can successfully mitigate mild to moderate symptoms of depression, often in place of a drug regimen.
 
-<p class="margin">In 2009, Aware Defeat Depression began offering the Living Life to the Full programme, founded on Cognitive Behavioral Therapy principles and with funding from the Department of Health, Social Services and Public Safety. The programme provides educational counseling including coaching on how to cope with depressive symptoms and general wellness tips.
+<p class="margin">In 2009, Aware Defeat Depression began offering the Living Life to the Full programme, founded on Cognitive Behavioral Therapy principles and with funding from the Department of Health, Social Services and Public Safety. The programme provides educational counselling including coaching on how to cope with depressive symptoms and general wellness tips.
 
-<p class="margin">An evaluation of 394 participants found the programme highly successful. Using a standardized classification method administered before and after a 6 to 8-week administration period, the number of participants classified as “depressed” dropped 59 percent, while the number classified as “happy” increased 57 percent. Trends were similar between male and female participants.
+<p class="margin">An evaluation of 394 participants found the programme highly successful. Using a standardised classification method administered before and after a 6 to 8-week administration period, the number of participants classified as “depressed” dropped 59 percent, while the number classified as “happy” increased 57 percent. Trends were similar between male and female participants.
 
-<p class="margin">Aware Defeat Depression are hopeful positive results like these will bolster support for future funding so more free courses can be offered to patients whose GPs may have no other alternative but begin a psychiatric career..  
-
-<p class="margin">Plans in Northern Ireland to combine suicide prevention programmes and mental health and wellbeing initiatives this year they hope are a significant step forward. If that funding leads to 
+<p class="margin">Aware Defeat Depression are hopeful positive results like these will bolster support for future funding so more free services can be offered to patients whose GPs may have no other alternative but to begin a psychiatric career.
  
 <p class="margin">“We try to intervene with as little as what is needed, but something that has an evidence base to it and something that will give people support and hope towards their recovery,” said McEneaney.
+
 <blockquote style="margin:0px 90px 20px;">
 	<p>It’s about giving people the tools, the strategy and building up their own personal resilience to look after their own health and well-being and of each other.</p>
 </blockquote>
