--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -35,7 +35,7 @@
 </script>
 
 
-<a href="" onclick="return false;" class="chapt">Chapters</a>
+<a href="" onclick="return false;" class="chapt"><p>Chapters</p></a>
 
 
 
@@ -514,6 +514,7 @@ This graph shows the average monthly rate opioids are prescribed by GPs in North
 	<p>It’s about giving people the tools, the strategy and building up their own personal resilience to look after their own health and well-being and of each other.</p>
 </blockquote>
 
+<img style="width: 150px; margin:0 auto; display:block;" src="{% static 'rx/image/blue pills.png' %}">
 
 <br><br>
 
