--- a/prescript/static/rx/css/index.css
+++ b/prescript/static/rx/css/index.css
@@ -131,7 +131,7 @@ p.margin{
 }
 .vizblocklock3{
 	max-width: 500px;
-	margin-top: 20px;
+	margin: 5px 10px;
 	float:left;
 	padding: 20px;
 	display:block;
@@ -210,19 +210,20 @@ blockquote:before {
 .chapt {
 
 	position:fixed;
-	top:40px;
+	top:160px;
 
 
-	background-color:white;
+	background-color:#FFFFCC;
 
 
 	-webkit-border-bottom-right-radius:13px;
 	-moz-border-radius-bottomright:13px;
 	border-bottom-right-radius:13px;
 	
-	-webkit-border-bottom-left-radius:13px;
-	-moz-border-radius-bottomleft:13px;
-	border-bottom-left-radius:13px;
+	-webkit-border-top-right-radius:13px;
+	-moz-border-radius-topright:13px;
+	border-top-right-radius:13px;
+
 	text-indent:0px;
 	border:1px solid #000000;
 	display:inline-block;
@@ -230,11 +231,23 @@ blockquote:before {
 	font-family:monospace;
 	font-size:18px;
 	font-style:normal;
-	height:28px;
-	line-height:28px;
-	width:106px;
+	height:100px;
+	line-height:30px;
+	width:30px;
 	text-decoration:none;
-	text-align:center;
+
+	-webkit-box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.3);
+	-moz-box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.3);
+	box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.3);
+
+}
+.chapt p{
+	margin-top:65px;
+	-webkit-transform: rotate(-90deg);
+	-moz-transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	-o-transform: rotate(-90deg);
+	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 .chapt:hover {
 	background:#333333;
@@ -271,6 +284,10 @@ blockquote:before {
 	font-size: 20px;
 	text-decoration: none;
 	color:white;
+}
+
+#TOC li a:hover{
+	text-decoration: underline;
 }
 
 #chapt_X{
