--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -125,7 +125,6 @@
 	<table id="gpCompare">
 		<thead>
 			<tr>
-				<th></th>
 				<th>Antidepressants</th>
 				<th>Anxiolytics</th>
 				<th>Opioid Analgesics</th>
@@ -134,11 +133,10 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>Nearest 10</td>
-				<td class="anti_cell">{{gp_compare.anti_rank|ordinal}}</td>
-				<td class="anxi_cell">{{gp_compare.anxi_rank|ordinal}}</td>
-				<td class="opio_cell">{{gp_compare.opio_rank|ordinal}}</td>
-				<td class="hypn_cell">{{gp_compare.hypn_rank|ordinal}}</td>
+				<td class="anti_cell superord">{{gp_compare.anti_rank|ordinal}}</td>
+				<td class="anxi_cell superord">{{gp_compare.anxi_rank|ordinal}}</td>
+				<td class="opio_cell superord">{{gp_compare.opio_rank|ordinal}}</td>
+				<td class="hypn_cell superord">{{gp_compare.hypn_rank|ordinal}}</td>
 			</tr>
 		</tbody>
 	</table>
@@ -148,7 +146,7 @@
 	{% if gp_compare.anti_comp == "OVER" %}
 	<style>.anti_cell{background-color:#800000;}</style>
 	{% elif gp_compare.anti_comp == "HIGH" %}
-	<style>.anti_cell{background-color:#FBEC5D;}</style>
+	<style>.anti_cell{background-color:#EEAD0E;}</style>
 	{% else %}
 	<style>.anti_cell{background-color:#86C67C;}</style>
 	{% endif %}
@@ -156,7 +154,7 @@
 	{% if gp_compare.anxi_comp == "OVER" %}
 	<style>.anxi_cell{background-color:#800000;}</style>
 	{% elif gp_compare.anxi_comp == "HIGH" %}
-	<style>.anxi_cell{background-color:#FBEC5D;}</style>
+	<style>.anxi_cell{background-color:#EEAD0E;}</style>
 	{% else %}
 	<style>.anxi_cell{background-color:#86C67C;}</style>
 	{% endif %}
@@ -164,7 +162,7 @@
 	{% if gp_compare.opio_comp == "OVER" %}
 	<style>.opio_cell{background-color:#800000;}</style>
 	{% elif gp_compare.opio_comp == "HIGH" %}
-	<style>.opio_cell{background-color:#FBEC5D;}</style>
+	<style>.opio_cell{background-color:#EEAD0E;}</style>
 	{% else %}
 	<style>.opio_cell{background-color:#86C67C;}</style>
 	{% endif %}
@@ -172,10 +170,22 @@
 	{% if gp_compare.hypn_comp == "OVER" %}
 	<style>.hypn_cell{background-color:#800000;}</style>
 	{% elif gp_compare.hypn_comp == "HIGH" %}
-	<style>.hypn_cell{background-color:#FBEC5D;}</style>
+	<style>.hypn_cell{background-color:#EEAD0E;}</style>
 	{% else %}
 	<style>.hypn_cell{background-color:#86C67C;}</style>
 	{% endif %}
+
+
+	<script type="text/javascript">
+	$('.superord').each(function() {
+	    $(this).html(
+	        $(this).html().substr(0, $(this).html().length-2)
+	          + "<span style='font-size:30px; vertical-align:top;'>"
+	          + $(this).html().substr(-2)
+	          + "</span>");
+	});
+	</script>
+
 
 {% endif %}
 
