--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -124,10 +124,10 @@
 	<table id="gpCompare">
 		<thead>
 			<tr>
-				<th>Antidepressants</th>
-				<th>Anxiolytics</th>
-				<th>Opioid Analgesics</th>
-				<th>Hypnotics</th>
+				<td class="gpC_header">Antidepressants</td>
+				<td class="gpC_header">Anxiolytics</td>
+				<td class="gpC_header">Opioid Analgesics</td>
+				<td class="gpC_header">Hypnotics</td>
 			</tr>
 		</thead>
 		<tbody>
@@ -180,7 +180,7 @@
 	$('.superord').each(function() {
 	    $(this).html(
 	        $(this).html().substr(0, $(this).html().length-2)
-	          + "<span style='font-size:20px; vertical-align:top; font-weight: normal;'>"
+	          + "<span style='font-size:30px; vertical-align:top; font-weight: normal;'>"
 	          + $(this).html().substr(-2)
 	          + "</span>");
 	});
