--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -124,7 +124,7 @@
 	<table id="gpCompare">
 		<tbody>
 			<tr>
-				<td class="over_hd" colspan="4">How this GP compares</td>
+				<td class="gpC_over_hd" colspan="4">How this GP compares within 10 nearest GPs</td>
 			</tr>
 			<tr>
 				<td class="gpC_header">Antidepressants</td>
