--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -299,6 +299,8 @@ td a:hover{
 	margin:50px auto 30px;
 	border-spacing: 20px 0px;
 	width:850px;
+	clear:left;
+	display:block;
 }
 
 #gpCompare .gpC_header{
