--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -115,8 +115,12 @@
 	</div>
 
 </div>
-
 <br>
+<div id="help_dialog">
+
+	<p>*Depression prevalence is a measure of the percentage of registered patients ever having been coded for depression by a GP. It is assessed as part of the Quality and Outcomes Framework, which is a voluntary incentive program included in the General Medical Services Contract. Read more about prevalence statistics <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence">here</a>. QOF data for GPs can be found <a href="http://www.gpcontract.co.uk/">here</a>.
+</div>
+
 {% if gp_compare != "NA" %}
 
 	
