--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -115,10 +115,10 @@
 	</div>
 
 </div>
-<br>
+<br><br><br><br>
 <div id="help_dialog">
+	<p>Depression prevalence is a measure of the percentage of registered patients ever having been coded for depression by a GP. It is assessed as part of the Quality and Outcomes Framework, which is a voluntary incentive program included in the General Medical Services Contract. Read more about prevalence statistics <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence">here</a>. QOF data for GPs can be found <a href="http://www.gpcontract.co.uk/">here</a>.
 
-	<p>*Depression prevalence is a measure of the percentage of registered patients ever having been coded for depression by a GP. It is assessed as part of the Quality and Outcomes Framework, which is a voluntary incentive program included in the General Medical Services Contract. Read more about prevalence statistics <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence">here</a>. QOF data for GPs can be found <a href="http://www.gpcontract.co.uk/">here</a>.
 </div>
 
 {% if gp_compare != "NA" %}
@@ -128,7 +128,7 @@
 	<table id="gpCompare">
 		<tbody>
 			<tr>
-				<td class="gpC_over_hd" colspan="4">How this GP compares within 10 nearest GPs</td>
+				<td class="gpC_over_hd" colspan="4">How this GP compares within a group of 10</td>
 			</tr>
 			<tr>
 				<td class="gpC_header">Antidepressants</td>
@@ -144,7 +144,41 @@
 			</tr>
 			<tr>
 				<td colspan="4">
-					<p>Depression prevalence is a measure of the percentage of registered patients ever having been coded for depression by a GP. It is assessed as part of the Quality and Outcomes Framework, which is a voluntary incentive program included in the General Medical Services Contract. Read more about prevalence statistics <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence">here</a>. QOF data for GPs can be found <a href="http://www.gpcontract.co.uk/">here</a>.
+					<p>The Medicines Management Advisors use statistical reports that compare GPs to determine those that may be over-prescribing. Sometimes there are legitimate reasons why a GP may prescribe a class of drug more regularly than others. Sometimes there are not.
+
+					<p>The number in each box above ranks this GP's per capita prescription rate within a group of the 10 nearest GPs. The color of the box shows whether this GP's rate is statistically above average within their <a href="http://www.hscboard.hscni.net/lcg/" target="_blank">Local Commissioning Group</a> area.
+
+				<svg
+				   width="300"
+				   height="28.571428"
+				   id="keySVG">
+				  <g transform="translate(-68.5,-423.79074)" id="layer1">
+				    <rect
+				       width="95.477386"
+				       height="28.571428"
+				       x="273.02261"
+				       y="423.79074"
+				       id="rect2985"
+				       style="fill:#800000;fill-opacity:1;stroke:none" />
+				    <rect
+				       width="95.477386"
+				       height="28.571428"
+				       x="171.01256"
+				       y="423.79074"
+				       id="rect2985-0"
+				       style="fill:#eead0e;fill-opacity:1;stroke:none" />
+				    <rect
+				       width="95.477386"
+				       height="28.571428"
+				       x="68.5"
+				       y="423.79074"
+				       id="rect2985-04"
+				       style="fill:#4a7023;fill-opacity:1;stroke:none" />
+				     <text x="84" y="445" style="fill:white;font-size:18px;font-family:serif;">Average</text>
+				     <text x="193" y="445" style="fill:white;font-size:18px;font-family:serif;">Above</text>
+				     <text x="300" y="445" style="fill:white;font-size:18px;font-family:serif;">High</text>
+				     </g>
+				</svg>
 
 				</td>
 			</tr>
@@ -200,9 +234,12 @@
 
 {% endif %}
 
+<table>
+	<tr>
+		<td class="gpC_over_hd" >Top Prescriptions: Antidepressant, Anti-anxiety, Analgesic, Hypnotic</td>
+	</tr>
+</table>
 
-
-<h4 class="h_break">Top Prescriptions: Antidepressant, Anti-anxiety, Analgesic, Hypnotic</h4>
 <div id="table_container">
 <div id="table_div">
 	<script type="text/javascript" src="{% static 'rx/js/jquery.tablesorter.js' %}"></script>
