--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -319,7 +319,7 @@ td a:hover{
 
 #gpCompare .gpC_over_hd{
 	text-align: center;
-	background: #999999;
+	background: #42526C;
 	font-weight: normal;
 	color:white;
 	font-size: 22px;
@@ -366,3 +366,4 @@ td a:hover{
 	border-radius:0px;
 	padding:0px;
 }
+
