--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -144,11 +144,12 @@
 			</tr>
 			<tr>
 				<td id="comp_key_td" colspan="4">
-					<p>The Medicines Management Advisors (MMA) use statistical reports that compare GPs to determine those that may be over-prescribing. Sometimes there are legitimate reasons why a GP may prescribe a class of drug more regularly than others. Sometimes there are not.
+					<p>The Medicines Management Advisors (MMAs) use statistical reports that compare GPs to determine those that may be over-prescribing. Sometimes there are legitimate reasons why a GP may prescribe a class of drug more regularly than others. Sometimes there are not.
 
-					<p>The number in each box above ranks this GP's per capita prescription rate within a group of 10 GPs, including the nine nearest to it. The color of each box shows whether this GP's rate is statistically above average within their <a href="http://www.hscboard.hscni.net/lcg/" target="_blank">Local Commissioning Group</a> area. GPs with a "High" rate are two <a href="http://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule" target="_blank">standard deviations</a> above the average, which is the standard for review by the MMA.
+					<p>The number in each box above ranks this GP's per capita prescription rate within a group of 10 GPs, including the nine nearest to it. The color of each box shows whether this GP's rate is statistically above average within their <a href="http://www.hscboard.hscni.net/lcg/" target="_blank">Local Commissioning Group</a> area. GPs with a "High" rate are two <a href="http://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule" target="_blank">standard deviations</a> above the average, which is the standard for review by the MMAs.
 					<br><br>
-
+				</td>
+				<td colspan="4">
 				<svg
 				   width="300"
 				   height="28.571428"
