--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -296,7 +296,7 @@ td a:hover{
 /* COMPARE TABLE */
 
 #gpCompare{
-	margin:0px auto 30px;
+	margin:-15px auto 30px;
 	border-spacing: 20px 0px;
 	width:850px;
 	clear:left;
@@ -349,9 +349,9 @@ td a:hover{
 }
 
 #heading2{
-	margin:0px auto 30px;
+	margin:0px auto 8px;
 	border-spacing: 20px 0px;
-	width:850px;
+	width:760px;
 	clear:left;
 	display:block;
 	border-color:white;
@@ -365,5 +365,7 @@ td a:hover{
 	font-style:italic;
 	border-radius:0px;
 	padding:0px;
+	font-family:"Times New Roman", serif;
+	width:760px;
 }
 
