--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -144,15 +144,10 @@
 			</tr>
 			<tr>
 				<td id="comp_key_td" colspan="4">
-					<p>The Medicines Management Advisors (MMAs) use statistical reports that compare GPs to determine those that may be over-prescribing. Sometimes there are legitimate reasons why a GP may prescribe a class of drug more regularly than others. Sometimes there are not.
-
-					<p>The number in each box above ranks this GP's per capita prescription rate within a group of 10 GPs, including the nine nearest to it. The color of each box shows whether this GP's rate is statistically above average within their <a href="http://www.hscboard.hscni.net/lcg/" target="_blank">Local Commissioning Group</a> area. GPs with a "High" rate are two <a href="http://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule" target="_blank">standard deviations</a> above the average, which is the standard for review by the MMAs.
+					<p>The number in each box above ranks this GP's per capita prescription rate within a group of 10 GPs, including the nine nearest to it. For example, a GP that prescribed antidepressants at the highest rate with its group of 10 would rank 1st. 
+					<p>The color of each box shows whether this GP's rate is statistically above average within their <a href="http://www.hscboard.hscni.net/lcg/" target="_blank">Local Commissioning Group</a> area. GPs with a "High" rate are two <a href="http://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule" target="_blank">standard deviations</a> above the average, which is the standard for review by the Medicines Management Advisors. A GP is "Above" average if its rate is one standard deviation above the LCG average. 
 					<br><br>
-				</td>
-				</tr>
-				<tr>
-				<td colspan="4">
-				<svg
+					<svg
 				   width="300"
 				   height="28.571428"
 				   id="keySVG">
@@ -183,9 +178,12 @@
 				     <text x="300" y="445" style="fill:white;font-size:18px;font-family:serif;">High</text>
 				     </g>
 				</svg>
-
 				</td>
-			</tr>
+				</tr>
+				
+				
+
+			
 		</tbody>
 	</table>
 
