--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -132,9 +132,9 @@
 			</tr>
 			<tr>
 				<td class="gpC_header">Antidepressants</td>
-				<td class="gpC_header">Anxiolytics</td>
-				<td class="gpC_header">Opioid Analgesics</td>
-				<td class="gpC_header">Hypnotics</td>
+				<td class="gpC_header">Anti-Anxiety</td>
+				<td class="gpC_header">Opioid Painkillers</td>
+				<td class="gpC_header">Sedatives</td>
 			</tr>
 			<tr>
 				<td class="anti_cell superord">{{gp_compare.anti_rank|ordinal}}</td>
@@ -339,9 +339,7 @@
 
 
 
-<div id="help_dialog">
-
-	<p>*Depression prevalence is a measure of the percentage of registered patients ever having been coded for depression by a GP. It is assessed as part of the Quality and Outcomes Framework, which is a voluntary incentive program included in the General Medical Services Contract. Read more about prevalence statistics <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence">here</a>. QOF data for GPs can be found <a href="http://www.gpcontract.co.uk/">here</a>.
+<div id="help_dialog2">
 
 
 
