--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -238,7 +238,7 @@
 
 <table id="heading2">
 	<tr>
-		<td class="gpC_over_hd" >Top Prescriptions: Antidepressant, Anti-anxiety, Analgesic, Hypnotic</td>
+		<td class="gpC_over_hd" >Top Prescriptions: Antidepressant, Anti-Anxiety, Opioid, Sedative</td>
 	</tr>
 </table>
 
