--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -343,7 +343,7 @@
 
 
 
-	<p>**Prescription rates are calculated in Defined Daily Doses per 1,000 registered patients per month. The rates for each GP are then ranked against other GPs that also prescribe that drug. Those ranks are calculated among GPs within a deprivation group and also all GPs in Northern Ireland.
+	<p>**Prescription rates are calculated in Defined Daily Doses per 1,000 registered patients per month. The rates for each GP are then ranked against other GPs that also prescribe that drug. Those ranks are calculated among GPs within a deprivation group and also among all GPs in Northern Ireland.
 
 </div>
 
