--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -495,6 +495,10 @@ This graph shows the average monthly rate opioids are prescribed by GPs in North
 
 <p class="margin">Neither side specifically addressed prescription rates in Northern Ireland which are significantly higher than those in other UK countries surveyed by The Detail.
 
+<div class="drugs_list">
+<h6>Look at your GP's prescribing statistics. Select "GPs" in the menu bar to search by postcode or GP name.</h6>
+</div>
+
 
 <hr class="separated"></hr>
 <a id="alternatives"></a>
