--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -145,7 +145,7 @@
 			<tr>
 				<td id="comp_key_td" colspan="4">
 					<p>The number in each box above ranks this GP's per capita prescription rate within a group of 10 GPs, including the nine nearest to it. For example, a GP that prescribed antidepressants at the highest rate within its group of 10 local GPs would rank 1st. 
-					<p>The color of each box shows whether this GP's rate is statistically above their <a href="http://www.hscboard.hscni.net/lcg/" target="_blank">Local Commissioning Group</a> average. GPs with a "High" rate are two <a href="http://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule" target="_blank">standard deviations</a> above average, which is the standard for review by the Medicines Management Advisors. A GP is "Above" average if its rate is one standard deviation above the LCG average. 
+					<p>The color of each box shows whether this GP's rate is statistically above their <a href="http://www.hscboard.hscni.net/lcg/" target="_blank">Local Commissioning Group</a> average. GPs with a "High" rate are two <a href="http://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule" target="_blank">standard deviations</a> above average, which is the standard for review by the Medicines Management Advisors. A GP is "Above" average if its rate is one standard deviation above the LCG average. "Average" GPs are at or below the average.
 					<br><br>
 					<svg
 				   width="300"
